POS004: Refactor code
